--- a/get_data_bq/sentiment_notebook.ipynb
+++ b/get_data_bq/sentiment_notebook.ipynb
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,13 +327,13 @@
     "means = df_copy.groupby(\n",
     "    'company',)[['score_title', 'score_description']].mean()\n",
     "means.reset_index(inplace=True)\n",
-    "means['pub_date'] = pd.to_datetime(date)\n",
-    "means['fetch_date'] = datetime.now()"
+    "means['pub_date'] = datetime.now().strftime(date)\n",
+    "means['fetch_date'] = datetime.now().strftime('%Y-%m-%d %H:%M:%S')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,16 +347,128 @@
     "    # Definiera din dataset och tabell\n",
     "    table_id = f\"{project_id}.{dataset}.{table}\"\n",
     "    # print(table_id)\n",
-    "\n",
+    "    list_of_dicts = data.to_dict(orient='records')\n",
     "    # print(rows_to_insert)\n",
-    "\n",
-    "    errors = client.insert_rows_from_dataframe(table_id, data)\n",
+    "    client.get_table(table_id)\n",
+    "    errors = client.insert_rows_json(table_id, list_of_dicts)\n",
     "    print(errors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>company</th>\n",
+       "      <th>score_title</th>\n",
+       "      <th>score_description</th>\n",
+       "      <th>pub_date</th>\n",
+       "      <th>fetch_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>APPL</td>\n",
+       "      <td>0.044651</td>\n",
+       "      <td>0.181734</td>\n",
+       "      <td>2024-08-20</td>\n",
+       "      <td>2024-08-26 14:04:13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>JPM</td>\n",
+       "      <td>-0.073580</td>\n",
+       "      <td>0.052360</td>\n",
+       "      <td>2024-08-20</td>\n",
+       "      <td>2024-08-26 14:04:13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NVDA</td>\n",
+       "      <td>0.002783</td>\n",
+       "      <td>0.175400</td>\n",
+       "      <td>2024-08-20</td>\n",
+       "      <td>2024-08-26 14:04:13</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  company  score_title  score_description    pub_date           fetch_date\n",
+       "0    APPL     0.044651           0.181734  2024-08-20  2024-08-26 14:04:13\n",
+       "1     JPM    -0.073580           0.052360  2024-08-20  2024-08-26 14:04:13\n",
+       "2    NVDA     0.002783           0.175400  2024-08-20  2024-08-26 14:04:13"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "means"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'company': 'APPL',\n",
+       "  'score_title': 0.04465106382978724,\n",
+       "  'score_description': 0.18173404255319148,\n",
+       "  'pub_date': Timestamp('2024-08-20 00:00:00'),\n",
+       "  'fetch_date': Timestamp('2024-08-26 13:28:16.020288')},\n",
+       " {'company': 'JPM',\n",
+       "  'score_title': -0.07358,\n",
+       "  'score_description': 0.052360000000000004,\n",
+       "  'pub_date': Timestamp('2024-08-20 00:00:00'),\n",
+       "  'fetch_date': Timestamp('2024-08-26 13:28:16.020288')},\n",
+       " {'company': 'NVDA',\n",
+       "  'score_title': 0.002783333333333341,\n",
+       "  'score_description': 0.1754,\n",
+       "  'pub_date': Timestamp('2024-08-20 00:00:00'),\n",
+       "  'fetch_date': Timestamp('2024-08-26 13:28:16.020288')}]"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_of_dicts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -428,13 +540,132 @@
        "2 2024-08-26 13:28:16.020288  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "means"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ls = means.drop(columns=['pub_date', 'fetch_date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>company</th>\n",
+       "      <th>score_title</th>\n",
+       "      <th>score_description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>APPL</td>\n",
+       "      <td>0.044651</td>\n",
+       "      <td>0.181734</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>JPM</td>\n",
+       "      <td>-0.073580</td>\n",
+       "      <td>0.052360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NVDA</td>\n",
+       "      <td>0.002783</td>\n",
+       "      <td>0.175400</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  company  score_title  score_description\n",
+       "0    APPL     0.044651           0.181734\n",
+       "1     JPM    -0.073580           0.052360\n",
+       "2    NVDA     0.002783           0.175400"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    APPL\n",
+       "1     JPM\n",
+       "2    NVDA\n",
+       "Name: company, dtype: object"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "means"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "write(means)"
    ]
   }
  ],
