--- a/get_stocks/get_stocks_notebook.ipynb
+++ b/get_stocks/get_stocks_notebook.ipynb
@@ -46,37 +46,43 @@
     "\n",
     "credentials = service_account.Credentials.from_service_account_file(\n",
     "    \"/mnt/c/Users/m_was/Downloads/tomastestproject-433206-48a55703dec2.json\")\n",
-    "client = bigquery.Client(credentials=credentials, project=credentials.project_id)\n",
-    "table_id = \"tomastestproject-433206.testdb_1.table_6\"  \n",
+    "client = bigquery.Client(credentials=credentials,\n",
+    "                         project=credentials.project_id)\n",
+    "table_id = \"tomastestproject-433206.testdb_1.table_6\"\n",
+    "\n",
     "\n",
     "def fetch_and_upload_stock_data(stock_symbol):\n",
-    "  \n",
-    "        # Construct the API URL\n",
-    "        url = f\"https://www.alphavantage.co/query?function=TIME_SERIES_DAILY&symbol={stock_symbol}&apikey={API_KEY}\"\n",
-    "        response = requests.get(url=url)\n",
-    "        response.raise_for_status()\n",
-    "        data = response.json()\n",
-    "        if data:  # Check if the data is not empty\n",
-    "            time_series = data.get(\"Time Series (Daily)\", {})  # Get the time series data\n",
-    "            rows_to_insert = []  # Initialize an empty list to store the data that will be inserted into BigQuery\n",
-    "            for date, daily_data in time_series.items():  # .items() returns a list of tuples with the key-value pairs of the dictionary\n",
-    "                row = {\n",
-    "                    \"date\": date,\n",
-    "                    \"open\": float(daily_data[\"1. open\"]),\n",
-    "                    \"high\": float(daily_data[\"2. high\"]),\n",
-    "                    \"low\": float(daily_data[\"3. low\"]),\n",
-    "                    \"close\": float(daily_data[\"4. close\"]),\n",
-    "                    \"volume\": int(daily_data[\"5. volume\"]),\n",
-    "                    \"stock_symbol\": stock_symbol  # Use stock_symbol instead of undefined stock_name\n",
-    "                }\n",
-    "                rows_to_insert.append(row)\n",
     "\n",
-    "            # Insert rows into BigQuery\n",
-    "            errors = client.insert_rows_json(table_id, rows_to_insert)\n",
-    "            if errors == []:\n",
-    "                print(\"New rows have been added.\")\n",
-    "            else:\n",
-    "                print(f\"Encountered errors while inserting rows: {errors}\")"
+    "    # Construct the API URL\n",
+    "    url = f\"https://www.alphavantage.co/query?function=TIME_SERIES_DAILY&symbol={\n",
+    "        stock_symbol}&apikey={API_KEY}\"\n",
+    "    response = requests.get(url=url)\n",
+    "    response.raise_for_status()\n",
+    "    data = response.json()\n",
+    "    if data:  # Check if the data is not empty\n",
+    "        # Get the time series data\n",
+    "        time_series = data.get(\"Time Series (Daily)\", {})\n",
+    "        # Initialize an empty list to store the data that will be inserted into BigQuery\n",
+    "        rows_to_insert = []\n",
+    "        # .items() returns a list of tuples with the key-value pairs of the dictionary\n",
+    "        for date, daily_data in time_series.items():\n",
+    "            row = {\n",
+    "                \"date\": date,\n",
+    "                \"open\": float(daily_data[\"1. open\"]),\n",
+    "                \"high\": float(daily_data[\"2. high\"]),\n",
+    "                \"low\": float(daily_data[\"3. low\"]),\n",
+    "                \"close\": float(daily_data[\"4. close\"]),\n",
+    "                \"volume\": int(daily_data[\"5. volume\"]),\n",
+    "                \"stock_symbol\": stock_symbol  # Use stock_symbol instead of undefined stock_name\n",
+    "            }\n",
+    "            rows_to_insert.append(row)\n",
+    "\n",
+    "        # Insert rows into BigQuery\n",
+    "        errors = client.insert_rows_json(table_id, rows_to_insert)\n",
+    "        if errors == []:\n",
+    "            print(\"New rows have been added.\")\n",
+    "        else:\n",
+    "            print(f\"Encountered errors while inserting rows: {errors}\")"
    ]
   },
   {
@@ -113,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
