--- a/transform_news_2/clean_news_notebook.ipynb
+++ b/transform_news_2/clean_news_notebook.ipynb
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,10 +346,10 @@
     "    )\n",
     "\n",
     "    table_id = f\"{project_id}.{dataset}.{table}\"\n",
-    "\n",
+    "    # unique_id, data,company\n",
     "    # Build your SQL query\n",
     "    query = f\"\"\"\n",
-    "        SELECT unique_id, data,company\n",
+    "        SELECT *\n",
     "        FROM `{table_id}`\n",
     "        WHERE is_processed IS FALSE\n",
     "        \"\"\"\n",
@@ -415,6 +415,7 @@
     "    # Förbered DataFrame\n",
     "    # Se till att 'data' kolumnen är en lista av artiklar\n",
     "    df.drop(columns=['unique_id'], inplace=True)\n",
+    "\n",
     "    df['data'] = df['data'].apply(lambda x: x.get(\n",
     "        'articles', []) if isinstance(x, dict) else [])\n",
     "\n",
@@ -429,15 +430,15 @@
     "    final_df = pd.concat(\n",
     "        [articles_df, df_exploded[['company']].reset_index(drop=True)], axis=1)\n",
     "\n",
-    "    final_df.drop(columns=['content', 'source.id', 'urlToImage'], inplace=True)\n",
+    "    # final_df.drop(columns=['content', 'source.id', 'urlToImage'], inplace=True)\n",
     "\n",
-    "    final_df['publishedAt'] = pd.to_datetime(\n",
-    "        final_df['publishedAt'], format='%Y-%m-%dT%H:%M:%SZ', utc=True)\n",
+    "    # final_df['publishedAt'] = pd.to_datetime(\n",
+    "    #     final_df['publishedAt'], format='%Y-%m-%dT%H:%M:%SZ', utc=True)\n",
     "\n",
-    "    final_df.rename(columns={\"source.name\": \"source_name\",\n",
-    "                             \"publishedAt\": \"pub_date\"},\n",
-    "                    inplace=True\n",
-    "                    )\n",
+    "    # final_df.rename(columns={\"source.name\": \"source_name\",\n",
+    "    #                          \"publishedAt\": \"pub_date\"},\n",
+    "    #                 inplace=True\n",
+    "    #                 )\n",
     "    return final_df\n",
     "\n",
     "\n",
@@ -495,17 +496,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_news_2(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "        Cleans and transforms raw news data extracted from BigQuery into a structured DataFrame format.\n",
+    "\n",
+    "    This function takes a DataFrame containing raw news data, unpacks JSON-like structures to separate rows \n",
+    "    for each news article, and normalizes the data into a flat table format. The resulting DataFrame will have \n",
+    "    one row per article with relevant information such as author, description, publication date, title, URL, \n",
+    "    source, company, and sentiment scores.\n",
+    "\n",
+    "    \"\"\"\n",
+    "    # Förbered DataFrame\n",
+    "    # Se till att 'data' kolumnen är en lista av artiklar\n",
+    "    df['data'] = df['data'].apply(lambda x: x.get(\n",
+    "        'articles', []) if isinstance(x, dict) else [])\n",
+    "\n",
+    "    # Explodera artiklar till separata rader\n",
+    "    df_exploded = df.explode('data')\n",
+    "\n",
+    "    # Normalisera JSON-data i 'data' kolumnen\n",
+    "    articles_df = pd.json_normalize(df_exploded['data'])\n",
+    "\n",
+    "    # Lägg till övriga kolumner\n",
+    "    # Kombinera normaliserad artikeldata med 'company' kolumnen\n",
+    "    final_df = pd.concat(\n",
+    "        [articles_df, df_exploded[['company']].reset_index(drop=True)], axis=1)\n",
+    "\n",
+    "    # final_df.drop(columns=['content', 'source.id', 'urlToImage'], inplace=True)\n",
+    "\n",
+    "    # final_df['publishedAt'] = pd.to_datetime(\n",
+    "    #     final_df['publishedAt'], format='%Y-%m-%dT%H:%M:%SZ', utc=True)\n",
+    "\n",
+    "    # final_df.rename(columns={\"source.name\": \"source_name\",\n",
+    "    #                          \"publishedAt\": \"pub_date\"},\n",
+    "    #                 inplace=True\n",
+    "    #                 )\n",
+    "    return final_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df['data'] = df['data'].apply(lambda x: x.get(\n",
+    "    'articles', []) if isinstance(x, dict) else [])\n",
+    "\n",
+    "# Explodera artiklar till separata rader\n",
+    "df_exploded = df.explode('data')\n",
+    "\n",
+    "# Normalisera JSON-data i 'data' kolumnen\n",
+    "articles_df = pd.json_normalize(df_exploded['data'])\n",
+    "\n",
+    "# Lägg till övriga kolumner\n",
+    "# Kombinera normaliserad artikeldata med 'company' kolumnen\n",
+    "final_df = pd.concat(\n",
+    "    [articles_df, df_exploded[['company']].reset_index(drop=True)], axis=1)\n",
+    "\n",
+    "# final_df.drop(columns=['content', 'source.id', 'urlToImage'], inplace=True)\n",
+    "\n",
+    "# final_df['publishedAt'] = pd.to_datetime(\n",
+    "#     final_df['publishedAt'], format='%Y-%m-%dT%H:%M:%SZ', utc=True)\n",
+    "\n",
+    "# final_df.rename(columns={\"source.name\": \"source_name\",\n",
+    "#                             \"publishedAt\": \"pub_date\"},\n",
+    "#                 inplace=True\n",
+    "#                 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/tomasrydenstam/Desktop/Skola/test_project/testv/lib/python3.12/site-packages/google/cloud/bigquery/table.py:1727: UserWarning: BigQuery Storage module not found, fetch data with the REST endpoint instead.\n",
-      "  warnings.warn(\n",
-      "/Users/tomasrydenstam/Desktop/Skola/test_project/testv/lib/python3.12/site-packages/google/cloud/bigquery/_pandas_helpers.py:207: UserWarning: Unable to determine type for field 'data'.\n",
-      "  warnings.warn(\"Unable to determine type for field '{}'.\".format(bq_field.name))\n"
+      "I0000 00:00:1725018441.377165 7426783 check_gcp_environment_no_op.cc:29] ALTS: Platforms other than Linux and Windows are not supported\n"
      ]
     }
    ],
@@ -516,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -541,113 +615,137 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>unique_id</th>\n",
-       "      <th>data</th>\n",
        "      <th>company</th>\n",
+       "      <th>fetch_date</th>\n",
+       "      <th>data</th>\n",
+       "      <th>is_processed</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>476e0453-2746-4128-afef-89cb2f6c162b</td>\n",
-       "      <td>{'articles': [{'author': 'applech2', 'content'...</td>\n",
        "      <td>AAPL</td>\n",
+       "      <td>2024-08-29 09:15:16+00:00</td>\n",
+       "      <td>{\"articles\":[{\"author\":\"applech2\",\"content\":\"A...</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2260b501-7b08-4807-94a5-dfedce28dde4</td>\n",
-       "      <td>{'articles': [{'author': 'applech2', 'content'...</td>\n",
        "      <td>AAPL</td>\n",
+       "      <td>2024-08-29 09:15:16+00:00</td>\n",
+       "      <td>{\"articles\":[{\"author\":\"applech2\",\"content\":\"A...</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>981f711c-dacc-4126-bc9e-4b9678ea9f76</td>\n",
-       "      <td>{'articles': [{'author': 'applech2', 'content'...</td>\n",
        "      <td>AAPL</td>\n",
+       "      <td>2024-08-29 10:55:40+00:00</td>\n",
+       "      <td>{\"articles\":[{\"author\":\"applech2\",\"content\":\"A...</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>058ab43e-c98f-4923-9635-32d03682a194</td>\n",
-       "      <td>{'articles': [{'author': 'applech2', 'content'...</td>\n",
+       "      <td>1954ea9f-280b-4433-8707-75cfa8659c73</td>\n",
        "      <td>AAPL</td>\n",
+       "      <td>2024-08-29 10:47:56+00:00</td>\n",
+       "      <td>{\"articles\":[{\"author\":\"applech2\",\"content\":\"A...</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1954ea9f-280b-4433-8707-75cfa8659c73</td>\n",
-       "      <td>{'articles': [{'author': 'applech2', 'content'...</td>\n",
+       "      <td>058ab43e-c98f-4923-9635-32d03682a194</td>\n",
        "      <td>AAPL</td>\n",
+       "      <td>2024-08-29 10:55:40+00:00</td>\n",
+       "      <td>{\"articles\":[{\"author\":\"applech2\",\"content\":\"A...</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
-       "      <td>46470d40-5be1-4daa-8a38-e20a463c5749</td>\n",
-       "      <td>{'articles': [{'author': 'William Gavin', 'con...</td>\n",
+       "      <td>bc448599-4b7d-4a88-ac3e-158bbaf0dcaf</td>\n",
        "      <td>TSLA</td>\n",
+       "      <td>2024-08-28 09:56:29+00:00</td>\n",
+       "      <td>{\"articles\":[{\"author\":\"William Gavin\",\"conten...</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>100</th>\n",
-       "      <td>dfb0f8bd-cc24-4250-aa84-f45832300251</td>\n",
-       "      <td>{'articles': [{'author': 'Ana Altchek', 'conte...</td>\n",
+       "      <td>ad4294b9-9cf1-45d0-9bea-84abf081544a</td>\n",
        "      <td>TSLA</td>\n",
+       "      <td>2024-08-27 20:47:09+00:00</td>\n",
+       "      <td>{\"articles\":[{\"author\":\"Ana Altchek\",\"content\"...</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>101</th>\n",
-       "      <td>ad4294b9-9cf1-45d0-9bea-84abf081544a</td>\n",
-       "      <td>{'articles': [{'author': 'Ana Altchek', 'conte...</td>\n",
+       "      <td>dfb0f8bd-cc24-4250-aa84-f45832300251</td>\n",
        "      <td>TSLA</td>\n",
+       "      <td>2024-08-27 20:47:09+00:00</td>\n",
+       "      <td>{\"articles\":[{\"author\":\"Ana Altchek\",\"content\"...</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>102</th>\n",
-       "      <td>abf0a84b-d8f0-46ad-9a2d-cb671b07fb8c</td>\n",
-       "      <td>{'articles': [{'author': 'Bradley Brownell', '...</td>\n",
+       "      <td>6af3087a-f252-46f0-9d29-4543bf81c804</td>\n",
        "      <td>TSLA</td>\n",
+       "      <td>2024-08-27 16:06:31+00:00</td>\n",
+       "      <td>{\"articles\":[{\"author\":\"Bradley Brownell\",\"con...</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>103</th>\n",
-       "      <td>6af3087a-f252-46f0-9d29-4543bf81c804</td>\n",
-       "      <td>{'articles': [{'author': 'Bradley Brownell', '...</td>\n",
+       "      <td>abf0a84b-d8f0-46ad-9a2d-cb671b07fb8c</td>\n",
        "      <td>TSLA</td>\n",
+       "      <td>2024-08-27 16:06:31+00:00</td>\n",
+       "      <td>{\"articles\":[{\"author\":\"Bradley Brownell\",\"con...</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>104 rows × 3 columns</p>\n",
+       "<p>104 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                unique_id  \\\n",
-       "0    476e0453-2746-4128-afef-89cb2f6c162b   \n",
-       "1    2260b501-7b08-4807-94a5-dfedce28dde4   \n",
-       "2    981f711c-dacc-4126-bc9e-4b9678ea9f76   \n",
-       "3    058ab43e-c98f-4923-9635-32d03682a194   \n",
-       "4    1954ea9f-280b-4433-8707-75cfa8659c73   \n",
-       "..                                    ...   \n",
-       "99   46470d40-5be1-4daa-8a38-e20a463c5749   \n",
-       "100  dfb0f8bd-cc24-4250-aa84-f45832300251   \n",
-       "101  ad4294b9-9cf1-45d0-9bea-84abf081544a   \n",
-       "102  abf0a84b-d8f0-46ad-9a2d-cb671b07fb8c   \n",
-       "103  6af3087a-f252-46f0-9d29-4543bf81c804   \n",
+       "                                unique_id company                fetch_date  \\\n",
+       "0    476e0453-2746-4128-afef-89cb2f6c162b    AAPL 2024-08-29 09:15:16+00:00   \n",
+       "1    2260b501-7b08-4807-94a5-dfedce28dde4    AAPL 2024-08-29 09:15:16+00:00   \n",
+       "2    981f711c-dacc-4126-bc9e-4b9678ea9f76    AAPL 2024-08-29 10:55:40+00:00   \n",
+       "3    1954ea9f-280b-4433-8707-75cfa8659c73    AAPL 2024-08-29 10:47:56+00:00   \n",
+       "4    058ab43e-c98f-4923-9635-32d03682a194    AAPL 2024-08-29 10:55:40+00:00   \n",
+       "..                                    ...     ...                       ...   \n",
+       "99   bc448599-4b7d-4a88-ac3e-158bbaf0dcaf    TSLA 2024-08-28 09:56:29+00:00   \n",
+       "100  ad4294b9-9cf1-45d0-9bea-84abf081544a    TSLA 2024-08-27 20:47:09+00:00   \n",
+       "101  dfb0f8bd-cc24-4250-aa84-f45832300251    TSLA 2024-08-27 20:47:09+00:00   \n",
+       "102  6af3087a-f252-46f0-9d29-4543bf81c804    TSLA 2024-08-27 16:06:31+00:00   \n",
+       "103  abf0a84b-d8f0-46ad-9a2d-cb671b07fb8c    TSLA 2024-08-27 16:06:31+00:00   \n",
        "\n",
-       "                                                  data company  \n",
-       "0    {'articles': [{'author': 'applech2', 'content'...    AAPL  \n",
-       "1    {'articles': [{'author': 'applech2', 'content'...    AAPL  \n",
-       "2    {'articles': [{'author': 'applech2', 'content'...    AAPL  \n",
-       "3    {'articles': [{'author': 'applech2', 'content'...    AAPL  \n",
-       "4    {'articles': [{'author': 'applech2', 'content'...    AAPL  \n",
-       "..                                                 ...     ...  \n",
-       "99   {'articles': [{'author': 'William Gavin', 'con...    TSLA  \n",
-       "100  {'articles': [{'author': 'Ana Altchek', 'conte...    TSLA  \n",
-       "101  {'articles': [{'author': 'Ana Altchek', 'conte...    TSLA  \n",
-       "102  {'articles': [{'author': 'Bradley Brownell', '...    TSLA  \n",
-       "103  {'articles': [{'author': 'Bradley Brownell', '...    TSLA  \n",
+       "                                                  data  is_processed  \n",
+       "0    {\"articles\":[{\"author\":\"applech2\",\"content\":\"A...         False  \n",
+       "1    {\"articles\":[{\"author\":\"applech2\",\"content\":\"A...         False  \n",
+       "2    {\"articles\":[{\"author\":\"applech2\",\"content\":\"A...         False  \n",
+       "3    {\"articles\":[{\"author\":\"applech2\",\"content\":\"A...         False  \n",
+       "4    {\"articles\":[{\"author\":\"applech2\",\"content\":\"A...         False  \n",
+       "..                                                 ...           ...  \n",
+       "99   {\"articles\":[{\"author\":\"William Gavin\",\"conten...         False  \n",
+       "100  {\"articles\":[{\"author\":\"Ana Altchek\",\"content\"...         False  \n",
+       "101  {\"articles\":[{\"author\":\"Ana Altchek\",\"content\"...         False  \n",
+       "102  {\"articles\":[{\"author\":\"Bradley Brownell\",\"con...         False  \n",
+       "103  {\"articles\":[{\"author\":\"Bradley Brownell\",\"con...         False  \n",
        "\n",
-       "[104 rows x 3 columns]"
+       "[104 rows x 5 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,20 +756,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import json\n",
     "\n",
+    "\n",
+    "def clean_news_3(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Cleans and transforms raw news data extracted from BigQuery into a structured DataFrame format.\n",
+    "\n",
+    "    This function takes a DataFrame containing raw news data, unpacks JSON-like structures to separate rows \n",
+    "    for each news article, and normalizes the data into a flat table format. The resulting DataFrame will have \n",
+    "    one row per article with relevant information such as author, description, publication date, title, URL, \n",
+    "    source, company, and sentiment scores.\n",
+    "\n",
+    "    Args:\n",
+    "        df (pd.DataFrame): DataFrame containing raw news data with columns `unique_id`, `company`, `fetch_date`, `data`, and `is_processed`.\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: A DataFrame where each row represents a single news article with additional columns from the `company` column.\n",
+    "    \"\"\"\n",
+    "    def extract_articles(json_obj):\n",
+    "        if isinstance(json_obj, dict) and 'articles' in json_obj:\n",
+    "            return json_obj['articles']\n",
+    "        return []\n",
+    "\n",
+    "    # Förbered DataFrame\n",
+    "    df['data'] = df['data'].apply(\n",
+    "        lambda x: json.loads(x) if isinstance(x, str) else {})\n",
+    "    df['data'] = df['data'].apply(extract_articles)\n",
+    "\n",
+    "    # Explodera artiklar till separata rader\n",
+    "    df_exploded = df.explode('data')\n",
+    "\n",
+    "    # Normalisera JSON-data i 'data' kolumnen\n",
+    "    articles_df = pd.json_normalize(df_exploded['data'])\n",
+    "\n",
+    "    # Lägg till övriga kolumner\n",
+    "    final_df = pd.concat(\n",
+    "        [articles_df, df_exploded[['company']].reset_index(drop=True)], axis=1)\n",
+    "\n",
+    "    # Droppa eventuellt onödiga kolumner\n",
+    "    final_df.drop(columns=['content', 'source.id',\n",
+    "                  'urlToImage'], inplace=True, errors='ignore')\n",
+    "\n",
+    "    # Omvandla 'publishedAt' till datetime format\n",
+    "    final_df['publishedAt'] = pd.to_datetime(\n",
+    "        final_df['publishedAt'], format='%Y-%m-%dT%H:%M:%SZ', utc=True, errors='coerce')\n",
+    "\n",
+    "    # Omvandla kolumnnamn för läsbarhet\n",
+    "    final_df.rename(columns={\"source.name\": \"source_name\",\n",
+    "                    \"publishedAt\": \"pub_date\"}, inplace=True)\n",
+    "\n",
+    "    return final_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dff = clean_news_3(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df, ids = get_raw_news_from_big_query(\n",
+    "    table='raw_news_with_uuid', project_id='tomastestproject-433206', dataset='testdb_1')\n",
     "\n",
     "# Rensa nyhetsdata\n",
-    "cleaned_df = clean_news(df=df)\n",
+    "dff = clean_news_3(df)\n",
     "\n",
     "# Gör sentimentanalyser\n",
-    "predict_sentiment(df=cleaned_df)\n",
+    "predict_sentiment(df=dff)\n",
     "\n",
     "# Skriv de rensade nyheterna till BigQuery och få antalet rader som skrevs\n",
-    "rows_written = write_clean_news_to_bq(data=cleaned_df, table='clean_news_copy')\n",
+    "rows_written = write_clean_news_to_bq(data=dff, table='clean_news_copy')\n",
     "\n",
     "update_is_processed(id_string=ids, table='raw_news_with_uuid')"
    ]
